[metadata]
name = eve-console-jump
version = 0.0.1
author = xv0x7c0
author_email = 13061441+xv0x7c0@users.noreply.github.com
description = Easily connect to eve-ng console port from terminal
long_description = file: README.md
classifiers = 
  Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
  mysql-connector-python >= 8.0.16

[options.entry_points]
console_scripts =
  eve-console-jump = eve_console_jump.command_line:main
